[gd_scene load_steps=13 format=3 uid="uid://crcdvstl0s1h0"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_hrhi5"]
[ext_resource type="Texture2D" uid="uid://cux8hr38a6ylk" path="res://scenes/game_object/player/player.png" id="1_xwtln"]
[ext_resource type="PackedScene" uid="uid://rk1lyfm1ie4n" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_qdmkd"]
[ext_resource type="PackedScene" uid="uid://berb2x1w78ypy" path="res://scenes/component/health_component.tscn" id="2_wwapi"]

[sub_resource type="Animation" id="Animation_a725e"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(-2.38419e-07, -9.53674e-07)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 0.392292, 1),
"update": 0,
"values": [0.0, -0.261799, 0.349066, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 3.4822, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1.3, 0.7)]
}

[sub_resource type="Animation" id="Animation_yklko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e7ptw"]
_data = {
"RESET": SubResource("Animation_yklko"),
"walk": SubResource("Animation_a725e")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mb4ox"]
bg_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7k5rl"]
bg_color = Color(0.262745, 0.882353, 0.701961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.14902, 0.192157, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_atlyq"]
radius = 27.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xr2y8"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_yiipl"]
radius = 6.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_hrhi5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e7ptw")
}

[node name="HealthComponent" parent="." instance=ExtResource("2_wwapi")]

[node name="Abilities" type="Node" parent="."]

[node name="SwordAbilityController" parent="Abilities" instance=ExtResource("2_qdmkd")]

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(32, 6)
offset_left = -16.0
offset_top = 2.0
offset_right = 16.0
offset_bottom = 8.0
pivot_offset = Vector2(16, 3)
theme_override_styles/background = SubResource("StyleBoxFlat_mb4ox")
theme_override_styles/fill = SubResource("StyleBoxFlat_7k5rl")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="PickupArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_atlyq")

[node name="CollisionArea2D" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_xr2y8")

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_xwtln")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_yiipl")

[node name="DamageInterval" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
